# Rubiks_Cube_Solver_HS

./: .gitattributes  CMakeLists.txt  CubeStructure.h  LICENSE  MoveTables.h  README.md  display.cpp  genFlipSlice.cpp  genFlipTwistTable.cpp  genPhaseTwoTable.cpp  genTwistSlice.cpp  main.cpp  mechanics.cpp  search.cpp
